# data-science-project

./: .gitignore  README.md  project.ipynb  pyproject.toml
Proposal/: main.typ
Proposal/template/: lib.typ
Report/: Report.typ
