[project]
name = "data-science-project"
version = "0.1.0"
description = "Data Science I Final Project - Analyzing the DBLP Dataset"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "scipy-stubs~=1.16.3",
    "seaborn>=0.13.2",
    "statistics>=1.0.3.5",
]

[dependency-groups]
dev = [
    "notebook>=7.5.0",
]
